--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@jfrolich/gatsby-plugin-extract-schema": "^0.0.4",
-    "@jfrolich/gatsby-plugin-reason": "^0.1.1",
-    "@jfrolich/graphql_ppx_re": "^0.6.0-beta.11",
-    "@jfrolich/reason-gatsby": "^0.1.1",
+    "@jfrolich/gatsby-plugin-reason": "^0.1.4",
+    "@jfrolich/graphql_ppx_re": "^0.6.0-beta.14",
+    "@jfrolich/reason-gatsby": "^0.1.4",
     "bs-platform": "^7.1.0",
+    "esm": "^3.2.25",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-feed": "^2.3.26",
@@ -30,7 +31,6 @@
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
     "gatsby-transformer-sharp": "^2.3.13",
-    "patch-package": "^6.2.0",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
