--- a/bsconfig.json
+++ b/bsconfig.json
@@ -13,6 +13,10 @@
     {
       "dir": "./src/",
       "subdirs": true
+    },
+    {
+      "dir": "./config/",
+      "subdirs": true
     }
   ],
   "ppx-flags": [
