--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "dependencies": {
     "@jfrolich/gatsby-plugin-extract-schema": "^0.0.4",
     "@jfrolich/gatsby-plugin-reason": "^0.1.4",
-    "@baransu/graphql_ppx_re": "^1.0.0-beta.5",
-    "@jfrolich/reason-gatsby": "^0.1.5",
-    "bs-platform": "^7.2.2",
+    "@reasonml-community/graphql-ppx": "^1.0.0-beta.12",
+    "bs-platform": "^8.0.3",
     "esm": "^3.2.25",
     "gatsby": "^2.20.8",
     "gatsby-image": "^2.2.39",
@@ -36,6 +35,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "reason-gatsby": "^0.1.7",
     "reason-react": "^0.7.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
